--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,25 +11,67 @@ background: url(../images/sym-forest.jpeg) no-repeat center center fixed;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
-/*	max-width: 100%;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;*/
 }
 
 nav {
-	background-color: transparent;
-	height: 150px;
+	display: inline-block;
+	height: 310px;
 	margin: 0;
 	text-align: center;
 }
 
 
 .top-pic {
-	margin-top: 25px;
-	width: 250px;
-	height: 150px;
+	/*margin-top: 25px;*/
+	/*margin-left: 111px;*/
+	width: 180px;
+	height: 155px;
+	opacity: 0.75;
 }
+
+.appnameheader {
+	color: rgba(255, 140, 0, 0.75);
+	margin-top: 25px;
+	margin-left: 84px;
+	/*color: darkorange;*/
+	/*color: brown;*/
+	font-family: lumberFont;
+	font-size: 132px;
+	letter-spacing: 12px;
+}
+
+.logoutbox {
+	float: right;
+	margin-right: 20px;
+	margin-top: 20px;
+	height: 30px;
+	/*margin-left: 800px;*/
+}
+
+
+.logout-btn {
+	background-color: dodgerblue;
+	text-align: center;
+	height: 46px;
+	width: 122px;
+	color: white;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border: 1px solid transparent;
+    border-radius: 6px;
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
+}
+
+.logout-btn:hover {
+	background-color: #ff7700;
+}
+
+.logout-btn:focus {
+	text-decoration: none;
+}
+
+
 
 /*div {
 	border: 1px red solid;
@@ -47,12 +89,29 @@ nav {
 
 /**************** SECTION 1: CUSTOMER INFO ****************/
 
-.center {
+/*.center {
     margin: auto;
-    /*width: 60%;*/
-    /*border: 3px solid #73AD21;*/
+    width: 60%;
+    border: 3px solid #73AD21;
     padding: 10px;
+	clear: both;
+}*/
+
+.section-header {
+	clear: both;
+	margin-left: 20px;
+	color: rgba(255, 255, 255, 0.75);
+	/*color: brown;*/
+	font-family: lumberFont;
+	letter-spacing: 1.5px;
 }
+
+@font-face {
+	font-family: lumberFont;
+    src: url(../images/lumberjack-font/lumberjack-rough.otf);
+}
+
+
 
 
 .cust-info {
@@ -64,11 +123,22 @@ nav {
 	justify-content: center;
 	align-items: stretch;
 	align-content: stretch;
-	height: 380px;
+	height: 300px;
 }
 
-.cust-header {
-	margin-left: 20px;
+#form-override input {
+	height: 42px;
+	font-size: 36px;
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
+}
+
+#form-override textarea {
+	font-size: 36px;
+	height: 104px;
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
+
 }
 
 input {
@@ -76,8 +146,6 @@ input {
 	border-left: none;
 	border-right: none;
 	border-bottom: solid 1px gray;
-	height: 32px;
-	font-size: 32px;
 }
 
 .left-input {
@@ -156,7 +224,6 @@ input {
 	margin: 10px;
 }
 .input7 {
-	height: 68px;
 	margin-top: 10px;
 	resize: none;
 	border-top: none;
@@ -193,9 +260,9 @@ input {
 
 
 
-.control-label {
+/*.control-label {
 	font-size: 28px;
-}
+}*/
 
 
 /*input[type=text]:focus, textarea:focus {
@@ -210,6 +277,8 @@ input {
     box-shadow: 0 0 5px darkorange;
 }*/
 
+
+
 .controls {
 }
 
@@ -218,9 +287,9 @@ input {
 	clear: both;
 }
 
-form {
+/*form {
 	font-size: 28px;
-}
+}*/
 
 /**************** SECTION 2: TIMBER INFO ****************/
 
@@ -234,29 +303,30 @@ form {
 
 /* ?? */
 .timber-info {
-
-	text-align: center;
+	/*text-align: center;
+	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: center;
 	align-items: stretch;
 	align-content: stretch;
-	height: 350px;
+	height: 350px;*/
 
 }
 
 .optionselect {
-	height: 150px;
+	height: 110px;
+	text-align: center;
 	/*position: absolute;*/
 }
 
 .pop-up {
-	text-align: center;
+	/*text-align: center;*/
 }
 
-.tim-img {
+/*.tim-img {
 	margin-right: 15px;
-}
+}*/
 
 /*.details-button {
 	clear: both;
@@ -344,6 +414,8 @@ form {
 	float: left;
 }*/
 
+
+
 .dropfocus {
 	/*border-color: white ;
 	outline: 0;
@@ -352,94 +424,97 @@ form {
 	box-shadow: 0 0 20px green !important;*/
 }
 
+
+
 .dropbtn1 {
-	width: 260px;
+	text-align-last: center;
+	width: 300px;
     background: green;
     color: white;
-    padding: 16px;
+    /*padding: 16px;*/
     font-size: 16px;
     border: none;
     cursor: pointer;
 	margin: 20px 5px 50px 20px;
+	font-family: lumberFont;
+	letter-spacing: 2px;
+
 }
 
 .dropbtn1:hover {
-	background-color: #ff7700;
+	/*background-color: #ff7700;
+	color: rgba(255, 255, 255, 0.75);*/
+	background-color: rgba(255, 255, 255, 0.75);
+	color: black;
+
+
 }
 
 .dropbtn1:focus {
 	border-color: white ;
 	outline: 0;
-	outline: thin dotted \9;
-	-moz-box-shadow: 0 0 30px green;
-	box-shadow: 0 0 30px green !important;
+	/*outline: thin dotted \9;*/
+	-moz-box-shadow: 0 0 30px white;
+	box-shadow: 0 0 30px white;
 }
 
 
 .dropbtn2 {
-	width: 260px;
-    background: darkorange;
+	text-align-last: center;
+	width: 300px;
+    background: #ff7700;
     color: white;
-    padding: 16px;
+    /*padding: 16px;*/
     font-size: 16px;
     border: none;
     cursor: pointer;
 	margin: 20px 5px 50px 20px;
+	font-family: lumberFont;
+	letter-spacing: 2px;
 }
 
 .dropbtn2:hover {
-	background-color: #ff7700;
+	background-color: rgba(255, 255, 255, 0.75);
+	color: black;
 }
 
 .dropbtn2:focus {
 	border-color: white ;
 	outline: 0;
 	outline: thin dotted \9;
-	-moz-box-shadow: 0 0 30px darkorange;
-	box-shadow: 0 0 30px darkorange !important;
-	}
+	-moz-box-shadow: 0 0 30px white;
+	box-shadow: 0 0 30px white;
+}
 
 
 
 .dropbtn3 {
-	width: 260px;
+	text-align-last: center;
+	width: 300px;
     background: #7c4e20;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    /*padding: 16px;*/
+    font-size: 24px;
     border: none;
     cursor: pointer;
 	margin: 20px 5px 50px 20px;
+	font-family: lumberFont;
+	letter-spacing: 2px;
 }
 
 .dropbtn3:hover {
-	background-color: #ff7700;
+	background-color: rgba(255, 255, 255, 0.75);
+	color: black;
 }
 
 .dropbtn3:focus {
 	border-color: white ;
 	outline: 0;
 	outline: thin dotted \9;
-	-moz-box-shadow: 0 0 30px #7c4e20;
-	box-shadow: 0 0 30px #7c4e20 !important;
-	}
-
-
-.dropdown {
-    /*position: relative;
-    display: inline-block;
-    min-width: 160px;
-    text-align: center;
-    margin: 0px 20px;*/
+	-moz-box-shadow: 0 0 30px white;
+	box-shadow: 0 0 30px white;
 }
 
-/*.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-}*/
 
 /*.dropdown-content a {
     color: black;
@@ -460,6 +535,18 @@ form {
     background-color: #3e8e41;
 }*/
 
+
+.timberinputbox {
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;;
+	align-items: center;
+	align-content: stretch;
+	height: 180px;
+}
+
 .left-tim-input {
 	width: 32%;
 	height: 110px;
@@ -467,6 +554,12 @@ form {
 	margin-left: 15px;
 	float: left;
 	text-align: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;;
+	align-items: center;
+	align-content: stretch;
 }
 
 .right-tim-input {
@@ -475,7 +568,47 @@ form {
 	box-sizing: border-box;
 	float: left;
 	text-align: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
 }
+
+.add-button-div {
+	width: 30%;
+	float: right;
+	height: 110px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+.add-btn {
+	background-color: dodgerblue;
+	text-align: center;
+	height: 46px;
+	width: 122px;
+	color: white;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border: 1px solid transparent;
+    border-radius: 6px;
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
+}
+
+.add-btn:hover {
+	background-color: #ff7700;
+}
+
+.add-btn:focus {
+	text-decoration: none;
+}
+
 
 .input11 {
 	border-radius: 5px;
@@ -491,12 +624,6 @@ form {
 	background: rgba(255, 255, 255, 0.75);
 	color: black;
 	margin: 10px;
-}
-
-.add-button-div {
-	width: 30%;
-	float: right;
-	/*margin-right: 45%;*/
 }
 
 
@@ -596,8 +723,7 @@ table {
 }
 
 .edit-del {
-	text-decoration: none;
-
+	/*text-decoration: none;*/
 }
 
 .small {
@@ -610,11 +736,10 @@ table {
 
 h3 {
 	text-decoration: none;
-
 }
 
 a:hover, a:focus {
-	text-decoration: none !important;
+	text-decoration: none;
 	color: red;
 }
 
@@ -797,7 +922,7 @@ h3 {
 	text-decoration: none;
 }
 
-.my-btn {
+.order-btn {
 	background-color: dodgerblue;
 	text-align: center;
 	height: 46px;
@@ -808,12 +933,19 @@ h3 {
     border: 1px solid transparent;
     border-radius: 6px;
 	margin-bottom: 25px;
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
 }
 
-.my-btn:hover {
+.order-btn:hover {
 	background-color: #ff7700;
 }
 
-.my-btn:focus {
-	text-decoration: none !important;
+.order-btn:focus {
+	text-decoration: none;
+}
+
+#form-override button {
+	font-family: lumberFont;
+	letter-spacing: 0.6px;
 }
