--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 body {
 max-width: 100%;
 margin: 0 auto !important;
-background: url(../images/sym-forest.jpeg) no-repeat center center fixed;
+/*background: url(../images/sym-forest.jpeg) no-repeat center center fixed;*/
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
