turned css back on

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,8 @@
 
 body {
 max-width: 100%;
-margin: 0 auto !important;
-/*background: url(../images/sym-forest.jpeg) no-repeat center center fixed;*/
+margin: 0 auto;
+background: url(../images/sym-forest.jpeg) no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
